修改代码分析问题。