@@ -12,7 +12,6 @@ import java.lang.reflect.Field;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * 基础 id 接口，用于对数据对象操作的统一继承接口。
@@ -69,7 +68,7 @@ public interface BasicIdentification<T> extends Serializable {
         List<PropertyDescriptor> propertyDescriptorList = Arrays
                 .stream(propertyDescriptors)
                 .filter(p -> ignorePropertyList.contains(p.getName()))
-                .collect(Collectors.toList());
+                .toList();
 
         for (PropertyDescriptor propertyDescriptor : propertyDescriptorList) {
             if (Objects.nonNull(propertyDescriptor.getWriteMethod()) && Objects.nonNull(propertyDescriptor.getReadMethod())) {
